roost-1711867011 error fixes

--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
       <!--Dependency added by RoostGPT-->
     </dependency>
     <dependency>
-      <groupId>org.junit</groupId>
+      <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.13.2</version>
       <scope>compile</scope>
